# money-management

./: .env.sample  pyproject.toml
app/: main.py  setting.py
app/cruds/: transaction.py  user.py
app/database/: database.py
app/dependencies/: auth.py  database.py  user.py
app/models/: transaction.py  user.py
app/routers/: auth.py  transaction.py  user.py
app/schemas/: transaction.py  user.py
app/services/: auth.py
